# ChangeLog for dev-libs/efl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/efl/ChangeLog,v 1.26 2015/03/17 01:43:59 vapier Exp $

*efl-9999 (17 Mar 2015)
*efl-1.13.1 (17 Mar 2015)

  17 Mar 2015; Mike Frysinger <vapier@gentoo.org> +efl-1.13.1.ebuild,
  +efl-9999.ebuild, metadata.xml:
  Version bump #537916 by José Romildo Malaquias. Import live git ebuild from
  overlay.

  15 Feb 2015; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneded useflag description from metadata.xml

  14 Feb 2015; Mike Frysinger <vapier@gentoo.org> efl-1.10.1.ebuild,
  efl-1.11.2.ebuild, efl-1.12.2.ebuild, efl-1.8.5.ebuild, efl-1.8.6.ebuild,
  efl-1.9.4.ebuild, efl-1.9.5.ebuild:
  Rename USE=jp2k to the standard USE=jpeg2k #539690 by jannis.

  28 Dec 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -files/efl-1.12.2-lauch_via_logind_or_root_privilege.patch, efl-1.12.2.ebuild:
  Move patch to distfiles mirrors

  28 Dec 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +files/efl-1.12.2-lauch_via_logind_or_root_privilege.patch:
  Add missing patch

  27 Dec 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> efl-1.12.2.ebuild:
  Re-add missing ~arm keyword

*efl-1.12.2 (27 Dec 2014)

  27 Dec 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +efl-1.12.2.ebuild:
  Version bump, fixes bug 529310, update sdl dependency, fixes bug 525146, add
  upstream patch to not require systemd-login for USE=drm, fixes bug 525848,
  unconditionally require jpeg, fixes bug 528044, update gstreamer dependency to
  1.0, fixes bug 526692

*efl-1.11.2 (07 Oct 2014)

  07 Oct 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +efl-1.11.2.ebuild:
  Version bump

  08 Aug 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> efl-1.10.1.ebuild:
  Add dependency on x11-libs/libxkbcommon with USE=drm, bug 516060

*efl-1.10.1 (29 Jun 2014)

  29 Jun 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +efl-1.10.1.ebuild:
  Version bump
