@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/efl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/efl/ChangeLog,v 1.26 2015/03/17 01:43:59 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/efl/ChangeLog,v 1.27 2015/03/17 17:34:56 vapier Exp $
+
+  17 Mar 2015; Mike Frysinger <vapier@gentoo.org> efl-1.13.1.ebuild,
+  efl-9999.ebuild:
+  Add missing deps for USE=drm #543582 by Priit Laes.
 
 *efl-9999 (17 Mar 2015)
 *efl-1.13.1 (17 Mar 2015)
